<resources>
    <string name="app_name">Ywaza3</string>
    <string name="profile_icon_title">Profile</string>
    <string name="matches_icon_title">Matches</string>
    <string name="standings_icon_title">Standings</string>
    <string name="favorite_icon_title">Favorite</string>
    <string name="season_title_in_standings">Season 21-22</string>
    <string name="club_title_in_standings">Club</string>
    <string name="mp_title_in_standings">MP</string>
    <string name="w_title_in_standings">W</string>
    <string name="d_title_in_standings">D</string>
    <string name="l_title_in_standings">L</string>
    <string name="pts_title_in_standings">PTS</string>
    <string name="premier_league_title_in_standings">PREMIER LEAGUE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="booking_spinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>